# jpeg-recompress

./: .gitignore  CHANGELOG  Dependencies  LICENSE  Makefile  README.md  meson.build
man/: jpeg-compare.1  jpeg-zfpoint.1  webp-compress.1
man/man1/: jpeg-compare.1  jpeg-hash.1  jpeg-recompress.1  jpeg-zfpoint.1  webp-compress.1
src/: jmetrics.c  jmetrics.h  jpeg-compare.c  jpeg-hash.c  jpeg-recompress.c  jpeg-zfpoint.c  util.c  webp-compress.c
test/: test.c
